# phantomstrike

./: .env.example  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  install.sh  mkdocs.yml  phantomstrike-mcp.json  proxy_daemon.py  pyproject.toml
.github/workflows/: gh-pages.yml
docs/: SETUP.md
search/: search_index.json
src/phantomstrike/: __init__.py  config.py  main.py
src/phantomstrike/execution/: queue.py  runner.py
src/phantomstrike/mcp/: client.py
src/phantomstrike/plugins/: base.py  registry.py
src/phantomstrike/plugins/cloud/: __init__.py  trivy.py
src/phantomstrike/plugins/generic/: shell.py
src/phantomstrike/plugins/network/: __init__.py  masscan.py  nmap.py  rustscan.py
src/phantomstrike/plugins/osint/: __init__.py  amass.py  subfinder.py
src/phantomstrike/plugins/password/: __init__.py  hydra.py
src/phantomstrike/plugins/webapp/: __init__.py  ffuf.py  gobuster.py  nikto.py  nuclei.py  sqlmap.py
src/phantomstrike/server/: app.py
src/phantomstrike/server/routes/: jobs.py  tools.py
src/phantomstrike/storage/: database.py
src/phantomstrike/utils/: logging.py  validation.py
tests/: conftest.py  test_plugins.py
